--- a/src/social-problems/01.md
+++ b/src/social-problems/01.md
@@ -18,13 +18,13 @@ In the rude beginning, each family produces its own food, makes its own clothes,
 
 And so come new dangers. The rude society resembles the creatures that though cut into pieces will live; the highly civilized society is like a highly organized animal: a stab in a vital part, the suppression of a single function, is death. A savage village may be burned and its people driven off--but, used to direct recourse to nature, they can maintain themselves. Highly civilized man, however, accustomed to capital, to machinery, to the minute division of labor, becomes helpless when suddenly deprived of these and thrown upon nature. Under the factory system, some sixty persons, with the aid of much costly machinery, co-operate to the making of a pair of shoes. But, of the sixty, not one could make a whole shoe. This is the tendency in all branches of production, even in agriculture. How many farmers of the new generation can use the flail? How many farmers' wives can now make a coat from the wool? Many of our farmers do not even make their own butter or raise their own vegetables! There is an enormous gain in productive power from this division of labor, which assigns to the individual the production of but a few of the things, or even but a small part of one of the things, he needs, and makes each dependent upon others with whom he never comes in contact; but the social organization becomes more sensitive. A primitive village community may pursue the even tenor of its life without feeling disasters which overtake other villages but a few miles off; but in the closely knit civilization to which we have attained, a war, a scarcity, a commercial crisis, in one hemisphere produces powerful effects in the other, while shocks and jars from which a primitive community easily recovers would to a highly civilized community mean wreck.
 
-It is starthng to think how destructive in a civilization like ours would be such fierce conflicts as fill the history of the past. The wars of highly civilized countries, since the opening of the era of steam and machinery, have been duels of armies rather than conflicts of peoples or classes. Our only glimpse of what might happen, were passion fully aroused, was in the struggle of the Paris Commune. And, since 1870, to the knowledge of petroleum has been added that of even more destructive agents. The explosion of a little nitro-glycerine under a few water-mains would make a great city uninhabitable; the blowing up of a few railroad bridges and tunnels would bring famine quicker than the wall of circumvallation that Titus drew around Jerusalem; the pumping of atmospheric air into the gas-mains, and the application of a match, would tear up every street and level every house. The Thirty Years War set back civilization in Germany; so fierce a war now would all but destroy it. Not merely have destructive powers vastly increased, but the whole social organization has become vastly more delicate.
+It is startling to think how destructive in a civilization like ours would be such fierce conflicts as fill the history of the past. The wars of highly civilized countries, since the opening of the era of steam and machinery, have been duels of armies rather than conflicts of peoples or classes. Our only glimpse of what might happen, were passion fully aroused, was in the struggle of the Paris Commune. And, since 1870, to the knowledge of petroleum has been added that of even more destructive agents. The explosion of a little nitro-glycerine under a few water-mains would make a great city uninhabitable; the blowing up of a few railroad bridges and tunnels would bring famine quicker than the wall of circumvallation that Titus drew around Jerusalem; the pumping of atmospheric air into the gas-mains, and the application of a match, would tear up every street and level every house. The Thirty Years War set back civilization in Germany; so fierce a war now would all but destroy it. Not merely have destructive powers vastly increased, but the whole social organization has become vastly more delicate.
 
 In a simpler state master and man, neighbor and neighbor, know each other, and there is that touch of the elbow which, in times of danger, enables society to rally. But present tendencies are to the loss of this. In London, dwellers in one house do not know those in the next; the tenants of adjoining rooms are utter strangers to each other. Let civil conflict break or paralyze the authority that preserves order and the vast population would become a terror-stricken mob, without point of rally or principle of cohesion, and your London would be sacked and burned by an army of thieves. London is only the greatest of great cities. What is true of London is true of 'New York, and in the same measure true of the many cities whose hundreds of thousands are steadily growing toward millions. These vast aggregations of humanity, where he who seeks isolation may find it more truly than in the desert; where wealth and poverty touch and jostle; where one revels and another starves within a few feet of each other, yet separated by as great a gulf as that fixed between Dives in Hell and Lazarus in Abraham's bosom--they are centers and types of our civilization. Let jar or shock dislocate the complex and delicate organization, let the policeman's club be thrown down or wrested from him, and the fountains of the great deep are opened, and quicker than ever before chaos comes again. Strong as it may seem, our civilization is evolving destructive forces. Not desert and forest, but city slums and country roadsides are nursing the barbarians who may be to the new what Hun and Vandal were to the old.
 
 Nor should we forget that in civilized man still lurks the savage. The men who, in past times, oppressed or revolted, who fought to the death in petty quarrels and drunk fury with blood, who burnt cities and rent empires, were men essentially such as those we daily meet. Social progress has accumulated knowledge, softened manners, refined tastes and extended sympathies, but man is yet capable of as blind a rage as, when clothed in skins, he fought wild beasts with a flint. And present tendencies, in some respects at least, threaten to kindle passions that have so often before flamed in destructive fury.
 
-There is in all the past nothing to compare with the rapid changes now going on in the civilized world. It seems as though in the European race, and in the nineteenth century, man was just beginning to live--just grasping his tools and becoming conscious of his powers. The snail's pace of crawhng ages has suddenly become the headlong rush of the locomotive, speeding faster and faster. This rapid progress is primarily in industrial methods and material powers. But industrial changes imply social changes and necessitate political changes. Progressive societies outgrow institutions as children outgrow clothes. Social progress always requires greater intelligence in the management of public affairs; but this the more as progress is rapid and change quicker.
+There is in all the past nothing to compare with the rapid changes now going on in the civilized world. It seems as though in the European race, and in the nineteenth century, man was just beginning to live--just grasping his tools and becoming conscious of his powers. The snail's pace of crawling ages has suddenly become the headlong rush of the locomotive, speeding faster and faster. This rapid progress is primarily in industrial methods and material powers. But industrial changes imply social changes and necessitate political changes. Progressive societies outgrow institutions as children outgrow clothes. Social progress always requires greater intelligence in the management of public affairs; but this the more as progress is rapid and change quicker.
 
 And that the rapid changes now going on are bringing up problems that demand most earnest attention may be seen on every hand. Symptoms of danger, premonitions of violence, are appearing all over the civilized world. Creeds are dying, beliefs are changing; the old forces of conservatism are melting away. Political institutions are failing, as clearly in democratic America as in monarchical Europe. There is growing unrest and bitterness among the masses, whatever be the form of government, a blind groping for escape from conditions becoming intolerable. To attribute all this to the teachings of demagogues is like attributing the fever to the quickened pulse. It is the new wine beginning to ferment in old bottles. To put into a sailing-ship the powerful engines of a first-class ocean steamer would be to tear her to pieces with their play. So the new powers rapidly changing all the relations of society must shatter social and political organizations not adapted to meet their strain.
 
