--- a/src/social-problems/03.md
+++ b/src/social-problems/03.md
@@ -16,7 +16,7 @@ Twelve months ago, when the hedges were blooming, I passed along a lovely Englis
 
 We still talk of our vast public domain, and figures showing millions and millions of acres of unappropriated public land yet swell grandly in the reports of our Land Office. But already it is so difficult to find public land fit for settlement, that the great majority of those wishing to settle find in cheaper to buy, and rents in California and the New Northwest run from a quarter to even one half the crop. It must be remembered that the area which yet figures in the returns of our public domain includes all the great mountain chains, all the vast deserts and dry plains fit only for grazing, or not even for that; it must be remembered that of what is really fertile, millions and millions of acres are covered by railroad grants as yet unpatented, or what amounts to the same thing to the settler, are shadowed by them; that much is held by appropriation of the water without which it is useless; and that much more is held under claims of various kinds, which, whether legal or illegal, are sufficient to keep the settler off unless he will consent to pay a price, or to mortgage his labor for years.
 
-Nevertheless, land with us is still comparatively cheap. But this cannot long continue. The stream of immigration that comes swelling in, added to our steadily augmenting natural increase, will soon now so occupy the available lands as to raise the price of the poorest land worth setthng on to a point we have never known. Nearly twenty years ago Mr. Wade, of Ohio, in a speech in the United States Senate, predicted that by the close of the century every acre of good agricultural land in the Union would be worth at least $50. That his prediction will be even more than verified we may already see. By the close of the century our population, at the normal rate of increase, will be over forty millions more than in 1880. That is to say, within the next seventeen years an additional population greater than that of the whole United States at the close of the civil war will be demanding room. Where will they find cheap land? There is no further West. Our advance has reached the Pacific, and beyond the Pacific is the East, with its teeming millions. From San Diego to Puget Sound there is no valley of the coast-line that is not settled or pre-empted. To the very farthest corners of the Republic settlers are already going. The pressure is already so great that speculation and settlement are beginning to cross the northern border into Canada and the southern border into Mexico; so great that land is being settled and is becoming valuable that a few years ago would have been rejected--land where winter lasts for six months and the thermometer goes down into the forties below zero; land where, owing to insufficient rainfall, a crop is always a risk: land that cannot be cultivated at all without irrigation. The vast spaces of the western half of the continent do not contain anything like the proportion of arable land that does the eastern. The "great American desert" yet exists, though not now marked upon our maps. There is not to-day remaining in the United States any considerable body of good land unsettled and unclaimed, upon which settlers can go with the prospect of finding a homestead on Government terms. Already the tide of settlement presses angrily upon the Indian reservations, and but for the power of the general government would sweep over them. Already, although her population is as yet but a fraction more than six to the square mile, the last acre of the vast public domain of Texas has passed into private hands, the rush to purchase during the past year having been such that many thousands of acres more than the State had were sold.
+Nevertheless, land with us is still comparatively cheap. But this cannot long continue. The stream of immigration that comes swelling in, added to our steadily augmenting natural increase, will soon now so occupy the available lands as to raise the price of the poorest land worth settling on to a point we have never known. Nearly twenty years ago Mr. Wade, of Ohio, in a speech in the United States Senate, predicted that by the close of the century every acre of good agricultural land in the Union would be worth at least $50. That his prediction will be even more than verified we may already see. By the close of the century our population, at the normal rate of increase, will be over forty millions more than in 1880. That is to say, within the next seventeen years an additional population greater than that of the whole United States at the close of the civil war will be demanding room. Where will they find cheap land? There is no further West. Our advance has reached the Pacific, and beyond the Pacific is the East, with its teeming millions. From San Diego to Puget Sound there is no valley of the coast-line that is not settled or pre-empted. To the very farthest corners of the Republic settlers are already going. The pressure is already so great that speculation and settlement are beginning to cross the northern border into Canada and the southern border into Mexico; so great that land is being settled and is becoming valuable that a few years ago would have been rejected--land where winter lasts for six months and the thermometer goes down into the forties below zero; land where, owing to insufficient rainfall, a crop is always a risk: land that cannot be cultivated at all without irrigation. The vast spaces of the western half of the continent do not contain anything like the proportion of arable land that does the eastern. The "great American desert" yet exists, though not now marked upon our maps. There is not to-day remaining in the United States any considerable body of good land unsettled and unclaimed, upon which settlers can go with the prospect of finding a homestead on Government terms. Already the tide of settlement presses angrily upon the Indian reservations, and but for the power of the general government would sweep over them. Already, although her population is as yet but a fraction more than six to the square mile, the last acre of the vast public domain of Texas has passed into private hands, the rush to purchase during the past year having been such that many thousands of acres more than the State had were sold.
 
 We may see what is coming by the avidity with which capitalists, and especially foreign capitalists, who realize what is the value of land where none is left over which population may freely spread, are purchasing land in the United States. This movement has been going on quietly for some years, until now there is scarcely a rich English peer or wealthy English banker who does not, either individually or as the member of some syndicate, own a great tract of our new land, and the purchase of large bodies for foreign account is going on every day. It is with these absentee landlords that our coming millions must make terms.
 
