--- a/src/social-problems/05.md
+++ b/src/social-problems/05.md
@@ -16,7 +16,7 @@ How in all other branches of industry the same process is going on, it is scarce
 
 That most of our rich men did begin with nothing is true. But that the same success could be as easily won now is not true. Times of change always afford opportunities for the rise of individuals, which disappear when social relations are again adjusted. We have not only been overrunning a new continent, but the introduction of steam and the application of machinery have brought about industrial changes such as the world never before saw.
 
-When William the Conqueror parceled out England among his followers, a feudal aristocracy was created out of an army of adventurers. But when society had hardened again, a hereditary nobility had formed into which no common man could hope to win his way, and the descendants of William's adventurers looked down upon men of their father's class as upon beings formed of inferior clay. So when a new country is rapidly setthng, those who come while land is cheap and industry and trade are in process of organization have opportunities that those who start from the same plane when land has become valuable and society has formed cannot have.
+When William the Conqueror parceled out England among his followers, a feudal aristocracy was created out of an army of adventurers. But when society had hardened again, a hereditary nobility had formed into which no common man could hope to win his way, and the descendants of William's adventurers looked down upon men of their father's class as upon beings formed of inferior clay. So when a new country is rapidly settling, those who come while land is cheap and industry and trade are in process of organization have opportunities that those who start from the same plane when land has become valuable and society has formed cannot have.
 
 The rich men of the first generation in a new country are always men who started with nothing, but the rich men of subsequent generations are generally those who inherited their start. In the United States, when we hear of a wealthy man, we naturally ask, "How did he make his money?" for the presumption, over the greater part of the country, is that he acquired it himself. In England they do not ordinarily ask that question--there the presumption is that he inherited it. But, though the soil of England was parceled out long ago, the great changes consequent upon the introduction of steam and machinery have there, as here, opened opportunities to rise from the ranks of labor to great wealth. Those of opportunities are now closed or closing. When a railroad train is slowly moving off, a single step may put one on it. But in a few minutes those who have not taken that step may run themselves out of breath in the hopeless endeavor to overtake the train. It is absurd to think that it is easy to stop aboard a train at full speed because those who got on board at starting did so easily. So is it absurd to think that opportunities open when steam and machinery were beginning their concentrating work will remain open.
 
