--- a/src/social-problems/06.md
+++ b/src/social-problems/06.md
@@ -38,7 +38,7 @@ Or take the fortunes made out of successful patents. Like that element in so man
 
 Through all great fortunes, and, in fact, through nearly all acquisitions that in these days can fairly be termed fortunes, these elements of monopoly, of spoliation, of gambling run. The head of one of the largest manufacturing firms in the United States said to me recently, "It is not on our ordinary business that we make our money; it is where we can get a monopoly." And this, I think, is generally true.
 
-Consider the important part in building up fortunes which the increase of land values has had, and is having, in the United States. This is, of course, monopoly, pure and simple. When land increases in value it does not mean that its owner has added to the general wealth. The owner may never have seen the land or done aught to improve it. He may, and often does, live in a distant city or in another country. Increase of land values simply means that the owners, by virtue of their appropriation of something that existed before man was, have the power of taking a larger share of the wealth produced by other people's labor. Consider how much the monopolies created and the advantages given to the unscrupulous by the tariff and by our system of internal taxation--how much the railroad (a business in its nature a monopoly), telegraph, gas, water and other similar monopolies, have done to concentrate wealth; how special rates, pools, combinations, corners, stock-watering and stock-gambling, the destructive use of wealth in driving off or buying off opposition which the public must finally pay for, and many other things which these will suggest, have operated to build up large fortunes, and it will at least appear that the unequal distribution of wealth is due in great measure to sheer spoliation; that the reason why those who work hard get so little, while so many who work little get so much, is, in very large measure, that the earnings of the one class are, in one way or another, filched away from them to swell the in- comes of the other.
+Consider the important part in building up fortunes which the increase of land values has had, and is having, in the United States. This is, of course, monopoly, pure and simple. When land increases in value it does not mean that its owner has added to the general wealth. The owner may never have seen the land or done aught to improve it. He may, and often does, live in a distant city or in another country. Increase of land values simply means that the owners, by virtue of their appropriation of something that existed before man was, have the power of taking a larger share of the wealth produced by other people's labor. Consider how much the monopolies created and the advantages given to the unscrupulous by the tariff and by our system of internal taxation--how much the railroad (a business in its nature a monopoly), telegraph, gas, water and other similar monopolies, have done to concentrate wealth; how special rates, pools, combinations, corners, stock-watering and stock-gambling, the destructive use of wealth in driving off or buying off opposition which the public must finally pay for, and many other things which these will suggest, have operated to build up large fortunes, and it will at least appear that the unequal distribution of wealth is due in great measure to sheer spoliation; that the reason why those who work hard get so little, while so many who work little get so much, is, in very large measure, that the earnings of the one class are, in one way or another, filched away from them to swell the incomes of the other.
 
 That individuals are constantly making their way from the ranks of those who get less than their earnings to the ranks of those who get more than their earnings, no more proves this state of things right than the fact that merchant sailors were constantly becoming pirates and participating in the profits of piracy, would prove that piracy was right and that no effort should be made to suppress it.
 
