--- a/src/social-problems/07.md
+++ b/src/social-problems/07.md
@@ -1,6 +1,6 @@
 # Is It the Best of All Possible Worlds?
 
-There are worlds and worlds--even within bounds of the same horizon. The man who comes into New York with plenty of money, who puts up at the Windsor or Brunswick, and is received by hospitable hosts in Fifth Avenue mansions, sees one New York. The man who comes with a dollar and a half, and goes to a twenty-five-cent lodging- house sees another. There are also fifteen-cent lodging-houses, and people too poor to go even to them.
+There are worlds and worlds--even within bounds of the same horizon. The man who comes into New York with plenty of money, who puts up at the Windsor or Brunswick, and is received by hospitable hosts in Fifth Avenue mansions, sees one New York. The man who comes with a dollar and a half, and goes to a twenty-five-cent lodging-house sees another. There are also fifteen-cent lodging-houses, and people too poor to go even to them.
 
 Into the pleasant avenues of the Park, in the bright May sunshine, dashes the railroad-wrecker's daughter, her tasty riding-habit floating free from the side of her glistening bay, and her belted groom, in fresh top-boots and smart new livery, clattering after, at a respectful distance, on another blooded horse, that chafes at the bit. The stock-gambler's son, rising from his trotter at every stride, in English fashion, his English riding-stick grasped by the middle, raises his hat to her nod. And as he whirls past in his London-made dogcart, a liveried servant sitting with folded arms behind him, she exchanges salutations with the high-born descendant of the Dutch gardener, whose cabbage-patch, now covered with brick and mortar, has become an "estate" of lordly income. While in the soft, warm air rings a musical note, and drawn by mettled steeds, the four-in-hands of the coaching-club rush by, with liveried guards and coach-tops filled with chattering people, to whom life, with its round of balls, parties, theaters, flirtations and excursions, is a holiday, in which, but for the invention of new pleasures, satiety would make time drag.
 
@@ -12,7 +12,7 @@ I stroll along Broadway in the evening, and by the magnificent saloon of the man
 
 We part, and as I turn down the street another acquaintance greets me, and, as his conversation grows interesting, I go out of my way, for to delay him were sin, as he must be at work by two in the morning. He has been trying to read "Progress and Poverty," he says: but he has to take it in such little snatches, and the children make such a noise in his two small rooms--for his wife is afraid to let them out on the street to learn so much bad--that it is hard work to understand some parts of it. He is a journeyman baker, but he has a good situation as journeyman bakers go. He works in a restaurant, and only twelve hours a day. Most bakers, he tells me, have to work fourteen and sixteen hours. Some of the places they work in would sicken a man not used to it, and even those used to it are forced to lay off every now and again, and to drink, or they could not stand it. In some bakeries they use good stock, he says, but they have to charge high prices, which only the richer people will pay. In most of them you often have to sift the maggots out of the flour, and the butter is always rancid. He belongs to a Union, and they are trying to get in all the journeyman bakers; but those that work longest, and have most need of it, are the hardest to get. Their long hours make them stupid, and take all the spirit out of them. He has tried to get into business for himself, and he and his wife once pinched and saved till they got a few hundred dollars, and then set up a little shop. But he had not money enough to buy a share in the Flour Association--a co-operative association of boss bakers, by which the members get stock at lowest rates--and he could not compete, lost his money, and had to go to work again as a journeyman. He can see no chance at all of getting out of it, he says; he sometimes thinks he might as well be a slave. His family grows larger and it costs more to keep them. His rent was raised two dollars on the 1st of May. His wife remonstrated with the agent, said they were making no more, and it cost them more to live. The agent said he could not help that; the property had increased in value, and the rents must be raised. The reason people complained of rents was that they lived too extravagantly, and thought they must have everything anybody else had. People could live, and keep strong and fit, on nothing but oatmeal. If they would do that they would find it easy enough to pay their rent.
 
-There is such a rush across the Atlantic that it is difficult to engage a passage for months ahead. The doors of the fine, roomy houses in the fashionable streets will soon be boarded up, as their owners leave for Europe, for the seashore, or the mountains. "Everybody is out of town," they will say. Not quite everybody, though. Some twelve or thirteen hundred thousand people, without counting Brooklyn, will be left to swelter through the hot summer. The swarming tenement-houses will not be boarded up; every window and door will be open to catch the least breath of air. The dirty streets will be crawhng with squalid life, and noisy with the play of unkempt children, who never saw a green Held or watched the curl of a breaker, save perhaps, when charity gave them a treat. Dragged women will be striving to quiet pining babies, sobbing and wailing away their little lives for the want of wholesome nourishment and fresh air; and degradation and misery that hides during the winter will be seen on every hand.
+There is such a rush across the Atlantic that it is difficult to engage a passage for months ahead. The doors of the fine, roomy houses in the fashionable streets will soon be boarded up, as their owners leave for Europe, for the seashore, or the mountains. "Everybody is out of town," they will say. Not quite everybody, though. Some twelve or thirteen hundred thousand people, without counting Brooklyn, will be left to swelter through the hot summer. The swarming tenement-houses will not be boarded up; every window and door will be open to catch the least breath of air. The dirty streets will be crawling with squalid life, and noisy with the play of unkempt children, who never saw a green Held or watched the curl of a breaker, save perhaps, when charity gave them a treat. Dragged women will be striving to quiet pining babies, sobbing and wailing away their little lives for the want of wholesome nourishment and fresh air; and degradation and misery that hides during the winter will be seen on every hand.
 
 In such a city as this, the world of some is as different from the world in which others live as Jupiter may be from Mars. There are worlds we shut our eyes to, and do not bear to think of, still less to look at, but in which human beings yet live--worlds in which vice takes the place of virtue, and from which hope here and hope hereafter seem utterly banished--brutal, discordant, torturing hells of wickedness and suffering.
 
@@ -22,7 +22,7 @@ Yet, not a fool above other fools was the pretty princess, who never in her whol
 
 But it is not this of which I intended here to speak so much as of that complacent assumption which runs through current thought and speech, that this work! in which we, nineteenth century. Christian, American men and women live, is, in its social adjustments, at least, about such a world as the Almighty intended it to be.
 
-Some say this in terms, others say it by implication, but in one form or another it is constantly taught. Even the wonders of modern invention have, with a most influential part of society, scarcely shaken the belief that social improvement is im- possible. Men of the sort who, a little while ago, derided the idea that steam-carriages might be driven over the land and steam-vessels across the sea, would not now refuse to believe in the most starthng mechanical invention. But lie who thinks society may be improved, he who thinks that poverty and greed may be driven from the world, is still looked upon in circles that pride themselves on their culture and rationalism as a dreamer, if not as a dangerous lunatic.
+Some say this in terms, others say it by implication, but in one form or another it is constantly taught. Even the wonders of modern invention have, with a most influential part of society, scarcely shaken the belief that social improvement is impossible. Men of the sort who, a little while ago, derided the idea that steam-carriages might be driven over the land and steam-vessels across the sea, would not now refuse to believe in the most startling mechanical invention. But lie who thinks society may be improved, he who thinks that poverty and greed may be driven from the world, is still looked upon in circles that pride themselves on their culture and rationalism as a dreamer, if not as a dangerous lunatic.
 
 The old idea that everything in the social world is ordered by the Divine Will--that it is the mysterious dispensations of Providence that give wealth to the few and order poverty as the lot of the many, make some rulers and the others serfs--is losing power; but another idea that serves the same purpose is taking its place, and we are told, in the name of science, that the only social improvement that is possible is by a slow race evolution, of which the fierce struggle for existence is the impelling force; that, as I have recently read in "a journal ot civilization" from the pen of a man who has turned from the preaching of what he called Christianity to the teaching of what he calls political economy, that "only the *élite* of the race has been raised to the point where reason and conscience can even curb the lower motive forces," and "that for all but a few of us the limit of attainment in life, in the best case, is to live out our term, to pay our debts, to place three or four children in a position as good as the father's was, and there make the account balance." As for "friends of humanity," and those who would "help the poor," they get from him the same scorn which the Scribes and Pharisees eighteen hundred years ago visited on a pestilent social reformer whom they finally crucified.
 
@@ -32,7 +32,7 @@ Lying beneath all such theories is the selfishness that would resist any inquiry
 
 But look around. All over the world the beauty and the glory and the grace of civilization rests on human lives crushed into misery and distortion.
 
-I will not speak of Germany, of France, of Eng- land. Look even here, where European civilization flowers in the free field of a new continent; where there are no kings, no great standing armies, no relics of feudal servitude; where national existence began with the solemn declaration of the equal and inalienable rights of men. I clip, almost at random, from a daily paper, for I am not seeking the blackest shadows:
+I will not speak of Germany, of France, of England. Look even here, where European civilization flowers in the free field of a new continent; where there are no kings, no great standing armies, no relics of feudal servitude; where national existence began with the solemn declaration of the equal and inalienable rights of men. I clip, almost at random, from a daily paper, for I am not seeking the blackest shadows:
 
 > "Margaret Hickey, aged 30 years, came to this city a few days ago from Boston with a seven-week-old baby. She tried to get work, but was not successful. Saturday night she placed the child in a cellar at No. 226 West Forty-second street. At midnight she called at Police Headquarters and said she had lost her baby in Forty-third street. In the meantime an officer found the child. The mother was held until yesterday morning, when she was taken to the Yorkville Court and sent to the Island for six months."
 
