--- a/src/social-problems/08.md
+++ b/src/social-problems/08.md
@@ -8,7 +8,7 @@ Does this seem a utopian dream? What would people of fifty years ago have though
 
 Did you ever see a pail of swill given to a pen of hungry hogs? That is human society as it is.
 
-Did you ever see a company of well-bred men and women sitting down to a good dinner, without scrambling, or josthng, or gluttony, each, knowing that his own appetite will be satisfied, deferring to and helping the others? That is human society as it might be.
+Did you ever see a company of well-bred men and women sitting down to a good dinner, without scrambling, or jostling, or gluttony, each, knowing that his own appetite will be satisfied, deferring to and helping the others? That is human society as it might be.
 
 "Devil catch the hindmost" is the motto of our so-called civilized society to-day. We learn early to "take care of No. 1," lest No. 1 should suffer; we learn early to grasp from others that we may not want ourselves. The fear of poverty makes us admire great wealth; and so habits of greed are formed, and we behold the pitiable spectacle of men who have already more than they can by any possibility use, toiling, striving, grasping to add to their store up to the very verge of the grave--that grave which, whatever else it may mean, does certainly mean the parting with all earthly possessions however great they be.
 
@@ -20,9 +20,9 @@ We are so accustomed to poverty that even in the most advanced countries we rega
 
 Yet who can look about him without seeing that to whatever cause poverty may be due, it is not due to the niggardliness of nature; without seeing that it is blindness or blasphemy to assume that the Creator has condemned the masses of men to hard toil for a bare living?
 
-If some men have not enough to live decently, do not others have far more than they really need? If there is not wealth sufficient to go around, giving every one abundance, is it because we have reached the limit of the production of wealth? Is our land all in use? is our labor all employed? is our capital all utilized? On the contrary, in what- ever direction we look we see the most stupendous waste of productive forces--of productive forces so potent that were they permitted to freely play the production of wealth would be so enormous that there would be more than a sufficiency for all. What branch of production is there in which the limit of production has been reached? What single article of wealth is there of which we might not produce enormously more?
+If some men have not enough to live decently, do not others have far more than they really need? If there is not wealth sufficient to go around, giving every one abundance, is it because we have reached the limit of the production of wealth? Is our land all in use? is our labor all employed? is our capital all utilized? On the contrary, in whatever direction we look we see the most stupendous waste of productive forces--of productive forces so potent that were they permitted to freely play the production of wealth would be so enormous that there would be more than a sufficiency for all. What branch of production is there in which the limit of production has been reached? What single article of wealth is there of which we might not produce enormously more?
 
-If the mass of the population of New York are jammed into the fever-breeding rooms of tenement- houses, it is not because there are not vacant lots enough in and around New York to give each family space for a separate home. If settlers are going into Montana and Dakota and Manitoba, it is not because there are not vast areas of untilled land much nearer the centres of population. If farmers are paying one-fourth, one-third, or even one-half their crops for the privilege of getting land to cultivate, it is not because there is not, even in our oldest states, great quantities of land which no one is cultivating.
+If the mass of the population of New York are jammed into the fever-breeding rooms of tenement-houses, it is not because there are not vacant lots enough in and around New York to give each family space for a separate home. If settlers are going into Montana and Dakota and Manitoba, it is not because there are not vast areas of untilled land much nearer the centres of population. If farmers are paying one-fourth, one-third, or even one-half their crops for the privilege of getting land to cultivate, it is not because there is not, even in our oldest states, great quantities of land which no one is cultivating.
 
 So true is it that poverty does not come from the inability to produce more wealth that from every side w^e hear that the power to produce is in excess of the ability to find a market; that the constant fear seems to be not that too little, but that too much, will be produced! Do we not maintain a high tariff, and keep at every port a horde of Custom House officers, for fear the people of other countries will overwhelm us with their goods? Is not a great part of our machinery constantly idle? Are there not, even in what we call good times, an immense number of unemployed men who would gladly be at work producing wealth if they could only get the opportunity? Do we not, even now, hear, from every side, of embarrassment from the very excess of productive power, and of combinations to reduce production? Coal operators band together to limit their output; ironworks have shut down, or are running on half time; distillers have agreed to limit their production to one-half their capacity, and sugar refiners to 60%; paper-mills are suspending for one, two or three days a week; the gunny cloth manufacturers, at a recent meeting, agreed to close their mills until the present overstock on the market is greatly reduced; many other manufacturers have done the same thing. The shoemaking machinery of E'ew England can, in six months full running, it is said, supply the whole demand of the United States for twelve months; the machinery for making rubber goods can turn out twice as much as the market will take.
 
