--- a/src/social-problems/14.md
+++ b/src/social-problems/14.md
@@ -20,9 +20,9 @@ Even when the improvement is kept a secret, or the inventor is protected for a t
 
 In this way all labor-saving inventions tend to increase the productive power of all labor, and, except in so far as they are monopolized, their whole benefit is thus diffused. For, if in one occupation labor become more profitable than in others, labor is drawn to it until the net average in different occupations is restored. And so, where not artificially prevented, does the same tendency bring to a com-mon level the earnings of capital. The direct effect of improvements and inventions which add to productive power is, it is to be remarked, always to increase the earnings of labor, never to increase the earnings of capital. The advantage, even in such improvements as may seem primarily to be rather capital-saving than labor-saving--as, for instance, an invention which lessens the time required for the tanning of hides--becomes a property and advantage of labor. The reason is, not to go into a more elaborate explanation, that labor is the active factor in production. Capital is merely its tool and instrument. The great gains made by particular capitalists in the utilization of improvements, are not the gains of capital, but generally the gains of monopoly, though sometimes they may be gains of adventure or of management. The rate of interest, which is the measure of the earnings of capital, has not increased with all the enormous labor-saving improvements of our century; on the contrary, its tendency has been to diminish. But the requirement of larger amounts of capital, which is generally characteristic of labor-saving improvements, may increase the facility with which those who have large capitals can establish monopolies that enable them to intercept what would naturally go to labor. This, however, is an effect, rather than a cause, of the failure of labor to get the benefit of improvements in production.
 
-For the cause we must go further. While labor-saving improvements increase the power of labor, no improvement or invention can release labor from its dependence upon land. Labor- saving improvements only increase the power of producing wealth from land. And land being monopolized as the private property of certain persons, who can thus prevent others from using it, all these gains, which accrue primarily to labor, can be demanded from labor by the owners of land, in higher rents and higher prices. Thus, as we see it, the march of improvement and invention has increased neither interest nor wages, but its general effect has everywhere been to increase the value of land. Where increase of wages has been won, it has been by combination, or the concurrence of special causes; but what of the increased productiveness which primarily attaches to labor has been thus secured by labor is comparatively trivial. Some part of it has gone to various other monopolies, but the great bulk has gone to the monopoly of the soil, has increased ground-rents and raised the value of land.
+For the cause we must go further. While labor-saving improvements increase the power of labor, no improvement or invention can release labor from its dependence upon land. Labor-saving improvements only increase the power of producing wealth from land. And land being monopolized as the private property of certain persons, who can thus prevent others from using it, all these gains, which accrue primarily to labor, can be demanded from labor by the owners of land, in higher rents and higher prices. Thus, as we see it, the march of improvement and invention has increased neither interest nor wages, but its general effect has everywhere been to increase the value of land. Where increase of wages has been won, it has been by combination, or the concurrence of special causes; but what of the increased productiveness which primarily attaches to labor has been thus secured by labor is comparatively trivial. Some part of it has gone to various other monopolies, but the great bulk has gone to the monopoly of the soil, has increased ground-rents and raised the value of land.
 
-The railroad, for instance, is a great labor-saving invention. It does not increase the quantity of grain which the farmer can raise, nor the quantity of goods which the manufacturer can turn out; but by reducing the cost of transportation it in- creases the quantity of all the various things which can be obtained in exchange for produce of either kind; which practically amounts to the same thing.
+The railroad, for instance, is a great labor-saving invention. It does not increase the quantity of grain which the farmer can raise, nor the quantity of goods which the manufacturer can turn out; but by reducing the cost of transportation it increases the quantity of all the various things which can be obtained in exchange for produce of either kind; which practically amounts to the same thing.
 
 These gains primarily accrue to labor; that is to say, the advantage given by the railroad in the district which it affects, is to save labor; to enable the same labor to procure more wealth. But as we see where railroads are built, it is not labor that secures the gain. The railroad being a monopoly--and in the United States, a practically unrestricted monopoly--as large a portion as possible of these gains, over and above the fair returns on the capital invested, is intercepted by the managers, who by fictitious costs, watered stock, and in various other ways, thinly disguise their levies, and who generally rob the stockholders while they fleece the public. The rest of the gain--the advantage which, after these deductions, accrues to labor, is intercepted by the monopolists of land. As the productiveness of labor is increased, or even as there is a promise of its increase, so does the value of land increase, and labor, having to pay proportionately more for land, is shorn of all the benefit. Taught by experience, when a railroad opens a new district we do not expect wages to increase; what we expect to increase is the value of land.
 
