--- a/src/social-problems/09.md
+++ b/src/social-problems/09.md
@@ -30,7 +30,7 @@ That justice is the highest quality in the moral hierarchy I do not say; but tha
 
 This, and this alone, is what I contend for--that our social institutions be conformed to justice; to those natural and eternal principles of right that are so obvious that no one can deny or dispute them--so obvious that by a law of the human mind even those who try to defend social injustice must invoke them. This, and this alone, I contend for--that he who makes should have; that he who saves should enjoy. I ask in behalf of the poor nothing whatever that properly belongs to the rich. Instead of weakening and confusing the idea of property, I would surround it with stronger sanctions. Instead of lessening the incentive to the production of wealth, I would make it more powerful by making the reward more certain. Whatever any man has added to the common stock of wealth, or has received of the free will of him who did produce it, let that be his as against all the world--his to use or to give, to do with it whatever he may please, so long as such use does not interfere with the equal freedom of others. For my part, I would put no limit on acquisition. No matter how many millions any man can get by methods which do not involve the robbery of others--they are his: let him have them. I would not even ask him for charity, or have it dinned into his ears that it is his duty to help the poor. That is his own affair. Let him do as he pleases with his own, without restriction and without suggestion. If he gets without taking from others, and uses without hurting others, what he does with his wealth is his own business and his own responsibility.
 
-I reverence the spirit that, in such cities as Lon- don and New York, organizes such great charities and gives to them such magnificent endowments, but that there is need for such charities proves to me that it is a slander upon Christ to call such cities Christian cities. I honor the Astors for having provided for New York the Astor Library, and Peter Cooper for having given it the Cooper Institute; but it is a shame and a disgrace to the people of New York that such things should be left to private beneficence. And he who struggles for that recognition of justice which, by securing to each his own, will make it needless to beg for alms from one for another, is doing a greater and a higher work than he who builds churches, or endows hospitals, or founds colleges and libraries. This justice, which would first secure to each his own earnings, is, it seems to me, of that higher than almsgiving, which the Apostle had in mind, when he said, "*Though I bestow all my goods to feed the poor, and though I give my body to he burned, and have not charity, it profiteth me nothing*."
+I reverence the spirit that, in such cities as London and New York, organizes such great charities and gives to them such magnificent endowments, but that there is need for such charities proves to me that it is a slander upon Christ to call such cities Christian cities. I honor the Astors for having provided for New York the Astor Library, and Peter Cooper for having given it the Cooper Institute; but it is a shame and a disgrace to the people of New York that such things should be left to private beneficence. And he who struggles for that recognition of justice which, by securing to each his own, will make it needless to beg for alms from one for another, is doing a greater and a higher work than he who builds churches, or endows hospitals, or founds colleges and libraries. This justice, which would first secure to each his own earnings, is, it seems to me, of that higher than almsgiving, which the Apostle had in mind, when he said, "*Though I bestow all my goods to feed the poor, and though I give my body to he burned, and have not charity, it profiteth me nothing*."
 
 Let US first ask what are the natural rights of men, and endeavor to secure them, before we propose either to beg or to pillage.
 
@@ -50,7 +50,7 @@ The sentiment to which I would appeal is not envy, nor yet self-interest, but th
 
 And what is there for which life gives us opportunity that can be compared with the effort to do what we may, be it ever so little, to improve social conditions and enable other lives to reach fuller, nobler development. Old John Brown, dying the death of the felon, launched into eternity with pinioned arms and the kiss of the slave child on his lips--was not his a greater life and a grander death than though his years had been given to self-seeking? Did he not take with him more than the man who grabs for wealth and *leaves* his millions? Envy the rich! Who that realizes that he must some day wake up in the beyond can envy those who spend their strength to gather what they cannot use here and cannot take away? The only thing certain to any of us is death. "Like the swallow darting through thy hall, such, O King, is the life of man!" We come from where we know not; we go--who shall say? Impenetrable darkness behind, and gathering shades before. What, when our time comes, does it matter whether we have fared daintily or not, whether we have worn soft raiment or not, whether we leave a great fortune or nothing at all, whether we shall have reaped honors or been despised, have been counted learned or ignorant--as compared with how we may have used that talent which has been intrusted to us for the Master's service? What shall it matter, when eyeballs glaze and ears grow dull, if out of the darkness may stretch a hand, and into the silence may come a voice:
 
-"*Well done, thou good and faithful servant: thou hast heen faithful over a few things, I will make thee ruler over many things; enter thou into the joy of thy Lord!*"
+"*Well done, thou good and faithful servant: thou hast been faithful over a few things, I will make thee ruler over many things; enter thou into the joy of thy Lord!*"
 
 I shall speak of rights, I shall speak of utility, I shall speak of interest; I shall meet on their chosen ground those who say that the largest production of wealth is the greatest good, and material progress the highest aim. Nevertheless, I appreciate the truth embodied in these words of Mazzini to the working-classes of Italy, and would echo them:
 
